--- a/iRedMail/samples/mailgraph/mailgraph.css
+++ b/iRedMail/samples/mailgraph/mailgraph.css
@@ -3,8 +3,8 @@ body  { width: 630px; background-color: white;
 	font-family: sans-serif;
 	font-size: 12pt;
 	margin: 5px }
-h1    { margin-top: 20px; margin-bottom: 30px;
-        text-align: center }
+h1    { margin-top: 20px; margin-bottom: 20px;
+        text-align: center; font-size: 1.8em; }
 h2    { background-color: #ddd;
 	padding: 2px 0 2px 4px }
 hr    { height: 1px;
