[svn r243] [Doc] Sync.

--- a/tutorial/iRedMail-doc-0.2/docbook.css
+++ b/tutorial/iRedMail-doc-0.2/docbook.css
@@ -174,3 +174,7 @@ pre.programlisting {
     /*font-family: Courier, "Courier New";*/
     font-size: 13px;
 }
+
+div.blockquote {
+    line-height: 1.4em;
+}
