--- a/tutorial/iRedMail-doc-0.2/docbook.css
+++ b/tutorial/iRedMail-doc-0.2/docbook.css
@@ -152,7 +152,7 @@ div.define-next        { border-top: 0.5pt solid black;
                        }
 
 div.note, div.tip, div.important {
-    border: 1px dotted #6bbdd6;
+    border: 1px dotted #cb0000;
     margin-top: 0.5em;
 }
 
