--- a/tutorial/iRedMail-doc-mysql-0.2/docbook.css
+++ b/tutorial/iRedMail-doc-mysql-0.2/docbook.css
@@ -79,7 +79,7 @@ body {
   margin-right: 0px;
   padding-left: 10px;
   padding-right: 10px;
-  font-size: 14px;
+  font-size: 0.8em;
   font-family: Georgia, "Times New Roman";
 }
 
