[svn r294] [wiki] Sync wiki & Doc.

--- a/tutorial/iRedMail-doc-mysql-0.2/docbook.css
+++ b/tutorial/iRedMail-doc-mysql-0.2/docbook.css
@@ -160,8 +160,12 @@ div.note table, div.tip table, div.important table {
     font-size: 12px;
 }
 
-div.itemizedlist, div.orderedlist, div.caution {
+div.itemizedlist, div.orderedlist {
     line-height: 0.7em;
+}
+
+div.caution {
+    border: 1px solid #cb0000;
 }
 
 pre.programlisting {
