[svn r597] [iRedAdmin]     * i18n support in webpy template file.     * Remove mako template dependence.

--- a/iRedAdmin/templates/default/index.html
+++ b/iRedAdmin/templates/default/index.html
@@ -1,8 +1,8 @@
-## File: index.html
-<% import mako.ext.babelplugin %> 
+$def with (name)
+
 <html>
-    <head><title>Hello</title></head>
+    <head><title>_("Hello"), ${name}</title></head>
     <body>
-        Message: ${msg}
+        $_("World"): ${name}
     </body>
 </html>
