[svn r599] [iRedOS] Add tool scripts, changelog and kickstart files.

--- a/iRedAdmin/templates/default/index.html
+++ b/iRedAdmin/templates/default/index.html
@@ -1,8 +1,8 @@
 $def with (name)
 
 <html>
-    <head><title>_("Hello"), ${name}</title></head>
+    <head><title>Test index page.</title></head>
     <body>
-        $_("World"): ${name}
+        $_("World"): ${name}.
     </body>
 </html>
