--- a/iRedAdmin/templates/default/index.html
+++ b/iRedAdmin/templates/default/index.html
@@ -1,8 +1,6 @@
-$def with (name)
-
 <html>
     <head><title>Test index page.</title></head>
     <body>
-        $_('World'): ${name}.
+        ${_('World')}: ${name}.
     </body>
 </html>
