--- a/iredadmin/templates/default/ldap/domain_add.html
+++ b/iredadmin/templates/default/ldap/domain_add.html
@@ -19,7 +19,7 @@
     <input type="text" name="domainName" size="40">
     <input type="submit" value="Add now" class="button">
     </p>
-    <p><span class="hint">{{ _('Hint: Multiple domains must be sperated by SPACE.') }}</span></p>
+    <p><span class="hint">{{ _('Note: Multiple domains must be sperated by SPACE.') }}</span></p>
     </form>
 {% endif %}
 
