--- a/iredadmin/templates/default/ldap/admin_add.html
+++ b/iredadmin/templates/default/ldap/admin_add.html
@@ -17,7 +17,7 @@
     <input type="text" size="40" name="username"> <strong></strong> 
     <input type="submit" value="Add now" class="button">
     </p>
-    <p><span id="hint">{{ _('Hint: Multiple accounts must be sperated by SPACE.') }}</span></p>
+    <p><span id="hint">{{ _('Note: Multiple accounts must be sperated by SPACE.') }}</span></p>
 </form>
 
 {% endblock rightcolumn %}
