[iredadmin] Remove extra options while create new user. Improve display_cn() in macros.html.

--- a/iredadmin-ose/templates/default/ldap/domain_create.html
+++ b/iredadmin-ose/templates/default/ldap/domain_create.html
@@ -28,7 +28,7 @@
         </div>
     </fieldset>
 
-    {{ display_cn() }}
+    {{ display_cn(accountType='domain') }}
 
     <div class="frm-buttons">
         <span class="submit">
