--- a/iredadmin-ose/templates/default/ldap/user_create.html
+++ b/iredadmin-ose/templates/default/ldap/user_create.html
@@ -28,6 +28,8 @@
 
     {{ display_cn(accountType='user') }}
 
+    {{ display_reset_password() }}
+
     <div class="frm-buttons">
         <span class="submit">
             <input type="submit" value="{{ _('Create') }}" />
