--- a/iredadmin-ose/templates/default/ldap/layout.html
+++ b/iredadmin-ose/templates/default/ldap/layout.html
@@ -19,7 +19,7 @@
 
     {# ---- JS ---- #}
     {% block js %}
-    <script type="text/javascript" src="{{ctx.homepath}}/static/{{skin}}/js/common.js"></script>
+    <!--<script type="text/javascript" src="{{ctx.homepath}}/static/{{skin}}/js/common.js"></script>-->
     <script src="{{ctx.homepath}}/static/js/jquery-1.3.2.min.js" type="text/javascript" ></script>
     <script src="{{ctx.homepath}}/static/js/jquery.tooltip.js" type="text/javascript" ></script>
     {% endblock js %}
