--- a/iredadmin-ose/templates/default/ldap/macros.html
+++ b/iredadmin-ose/templates/default/ldap/macros.html
@@ -165,3 +165,15 @@
         {% endif %}
     </fieldset>
 {%- endmacro %}
+
+{% macro display_quota(value='') -%}
+    <fieldset class="frm-group">
+        <legend class="group-legend"><strong>{{ _('Mail quota') }}</strong></legend>
+        <div class="sf-set">
+            <div class="sf-box text required">
+                <label><span>{{ _('Quota (in MB)') }}</span></label>
+                <span class="fld-input"><input type="text" name="quota" size="25" value="{{value}}" /></span>
+            </div>
+        </div>
+    </fieldset>
+{%- endmacro %}
