--- a/iredadmin-ose/templates/default/ldap/user_create.html
+++ b/iredadmin-ose/templates/default/ldap/user_create.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
-{% from "macros.html" import display_cn, display_reset_password, %}
+{% from "macros.html" import display_cn, display_reset_password,
+        display_quota, %}
 
 {% block js %}{% endblock js %}
 {% block js_tablesorter %}{% endblock %}
@@ -31,6 +32,8 @@
     </fieldset>
 
     {{ display_cn(accountType='user') }}
+
+    {{ display_quota(default_quota) }}
 
     {{ display_reset_password() }}
 
