[iRedMail] Mark 'lastLoginDate' as optional attribute for objectclass 'mailAdmin'. [iredadmin] Improve navigation.

--- a/iredadmin-ose/templates/default/ldap/admins.html
+++ b/iredadmin-ose/templates/default/ldap/admins.html
@@ -50,17 +50,8 @@ $("#admin_list").tablesorter( {
 #}
 
 {% block main %}
-{# Sub-menu #}
-{% if session.get('domainGlobalAdmin') == 'yes' %}
-<div class="admin-submenu gen-content">
-    <ul>
-        <li><a href="{{ctx.homepath}}/create/admin">Create new admin</a></li>
-    </ul>
-</div>
-{% endif %}
-
-<div id="brd-visit" class="gen-content">
-    <p><span>{{ _('All mail administrators.') }} {{ _('Total: %s.') |format(admins |length) }}</span></p>
+<div id="brd-crumbs-top" class="crumbs gen-content">
+    <p><span class="crumblast">{{ _('All mail administrators.') }} {{ _('Total: %s.') |format(admins |length) }}</span></p>
 </div>
 
 {# Show system message #}
