--- a/iredadmin-ose/templates/default/ldap/dashboard.html
+++ b/iredadmin-ose/templates/default/ldap/dashboard.html
@@ -6,7 +6,7 @@
 {% block title %} {{ _('Dashboard') }} {% endblock %}
 
 {% block main %}
-<div class="main-content">
+<div class="gen-content">
     <h3>Please report bugs and feature request to our forum or mail to author directly: <a href="mailto:michaelbibby@gmail.com">Zhang Huangbin</a>:</h3>
     <ul>
         <li>English forum: <a href="http://www.iredmail.org/forum/">http://www.iredmail.org/forum/</a></li>
