--- a/iredadmin-ose/templates/default/ldap/layout.html
+++ b/iredadmin-ose/templates/default/ldap/layout.html
@@ -62,7 +62,6 @@
                 {# Header #}
                 <div id="brd-head" class="gen-content">
                     {# Preferences #}
-                    <span class="float_right">{{ _("Logged in as <strong>%s</strong>." |format(session.get('username'))) }}</span></p>
                     <p id="brd-title"><a href="{{ctx.homepath}}/">iRedAdmin</a></p>
                     <p id="brd-desc">{{_('iRedMail Management') }}</p>
                 </div>
@@ -81,9 +80,23 @@
                     </ul>
                 </div>
 
+                <div id="brd-visit" class="admin-submenu gen-content">
+                    <p id="welcome"><span class="float_right">{{ _("Logged in as <strong>%s</strong>." |format(session.get('username'))) }}</span></p>
+                    <p id="visit-links" class="options">
+                        <span><strong>{{ _('You can create new') }}</strong></span>
+                        {% if session.get('domainGlobalAdmin') == 'yes' %}
+                            <span><a href="{{ctx.homepath}}/create/domain">Domain</a></span>
+                            <span>&bull;</span><span<a href="{{ctx.homepath}}/create/admin">Admin</a></span>
+                            <span>&bull;</span>
+                        {% endif %}
+                        <span><a href="{{ctx.homepath}}/create/user/">User</a></span>
+                        <span>&bull;</span><span><a href="{{ctx.homepath}}/create/maillist/">Mail list</a></span>
+                        <span>&bull;</span><span><a href="{{ctx.homepath}}/create/alias/">Alias</a></span>
+                    </p>
+                </div>
             {% endif %}
 
-            <div id="main">
+            <div id="main" class="main-content">
                 {% block main %}{% endblock main %}
             </div>
 
