--- a/iredadmin-ose/templates/default/ldap/user_create.html
+++ b/iredadmin-ose/templates/default/ldap/user_create.html
@@ -10,9 +10,12 @@
 {% block title %}{{ _('Create new mail user') }}{% endblock title %}
 
 {% block main %}
+<div id="brd-crumbs-top" class="crumbs gen-content">
+    <p><span class="crumblast">{{ _('Create new mail user') }}</span></p>
+</div>
 
 {# Display input field for adding new domain. #}
-<div class="main-content main-frm">
+<div class="main-frm">
     <form class="frm-form" method="post" method="{{ctx.homepath}}/create/user">
 
     <fieldset class="frm-group">
