--- a/iredadmin-ose/templates/default/ldap/login.html
+++ b/iredadmin-ose/templates/default/ldap/login.html
@@ -14,7 +14,7 @@
     #brd-wrap {
         margin-left: auto;
         margin-right: auto;
-        width: 50em;
+        width: 40em;
         text-align: left;
     }
 </style>
@@ -25,7 +25,7 @@
     <div class="main-head">
         <h2 class="hn"><span>{{ _('Login to manage your mail domains & users') }}</span></h2>
     </div>
-    <div class="main-content main-frm">
+    <div class="main-frm">
         <div class="content-head">
             <p class="important">{{ _('All fields labelled <em>(Required)</em> must be completed before the form is submitted.') }}</p>
         </div>
@@ -59,6 +59,7 @@
             </div>
         </form>
     </div>
+</div>
 {% endblock main %}
 
 {% block footer %}{%endblock%}
